Adds autobaseline option
Adds a -b/autobaseline option (defaults to off) which aligns the
bottoms of all glyphs.
Handy for icon fonts, still needs testing from a clean install though.

--- a/lib/fontcustom/templates/fontcustom.yml
+++ b/lib/fontcustom/templates/fontcustom.yml
@@ -12,6 +12,7 @@ font_descent: 64
 css_selector: .icon-{{glyph}}
 preprocessor_path: ""
 autowidth: false
+autobaseline: false
 no_hash: false
 force: false
 debug: false
